[package]
name = "wasm-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools.git" }
wasmprinter = { git = "https://github.com/bytecodealliance/wasm-tools.git" }
macros = {path = "macros"}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[patch.'https://github.com/bytecodealliance/wasm-tools.git']
wasmparser = { git = 'https://github.com/bvisness/wasm-tools.git', branch = 'wasm-viewer-updates' }
wasmprinter = { git = 'https://github.com/bvisness/wasm-tools.git', branch = 'wasm-viewer-updates' }
